--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,7 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div class="container"><div id="root"></div></div>
+    <div><a href="">Open-source</a> code, by Zahra Khedri</div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
